xee-xpath/tests/snapshots/logical__and_ebv_type_error_propagates.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"true() and (1, 2)\")"
---
Err(
    SpannedError {
        error: FORG0006,
        span: Some(
            SourceSpan(
                0,
                17,
            ),
        ),
    },
)
