xee-xpath/tests/snapshots/logical__and_effective_boolean_value.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"1 and 'a'\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
