xee-xpath/tests/snapshots/logical__and_empty_sequence.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"() and true()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
