xee-xpath/tests/snapshots/logical__and_false_guards_error.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"false() and xs:int(\"\") eq 1\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
