xee-xpath/tests/snapshots/logical__and_false_true.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"false() and true()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
