xee-xpath/tests/snapshots/logical__and_guarded_division.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"0 ne 0 and 1 div 0 lt 1\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
