xee-xpath/tests/snapshots/logical__and_left_error_propagates.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"xs:int(\"\") eq 1 and false()\"#)"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                10,
            ),
        ),
    },
)
