xee-xpath/tests/snapshots/logical__and_true_false.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"true() and false()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
