xee-xpath/tests/snapshots/logical__and_true_propagates_error.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"true() and xs:int(\"\") eq 1\"#)"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                11,
                21,
            ),
        ),
    },
)
