xee-xpath/tests/snapshots/logical__and_true_true.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(\"true() and true()\")"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    true,
                ),
            ),
        },
    ),
)
