xee-xpath/tests/snapshots/logical__chained_and_guards_error.snap
---
source: xee-xpath/tests/logical.rs
expression: "run(r#\"false() and xs:int(\"\") eq 1 and xs:int(\"\") eq 2\"#)"
---
Ok(
    One(
        One {
            item: Atomic(
                Boolean(
                    false,
                ),
            ),
        },
    ),
)
